[tool.poetry]
name = "radio-server"
version = "0.1.0"
description = "Goose FM Radio Server"
authors = ["Kim <kimb@kimb.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
mcp = {extras = ["cli"], version = "^1.2.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
